--- a/Gutenberg/src/embedpress-pdf/style.scss
+++ b/Gutenberg/src/embedpress-pdf/style.scss
@@ -50,11 +50,11 @@ span.isPro {
     width: 40px;
     height: 18px;
     font-size: 10px;
-    right: 0;
+    right: 5px;
     color: #fff;
     font-weight: 400;
     text-transform: uppercase;
-    top: 0;
+    top: 5px;
 }
 
 .pro-control:after {
